--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <p style="font-size: 1.5em;">Text Chatbot:</p>
 <a href="https://chatgpt.com" style="font-size: 1.2em;">ChatGPT</a><br>
-<a href="https://www.perplexity.ai" style="font-size: 1.2em;">Perplexity</a>
-
+<a href="https://www.perplexity.ai" style="font-size: 1.2em;">Perplexity</a><br>
+<a href="https://gemini.google.com/app/6962bcc8621668c8?hl=de" style="font-size: 1.2em;">Gemini</a><br>
 
 <p style="font-size: 1.5em;">Bilderstellungs KI:</p>
 <a href="https://deevid.ai/de/ai-image-generator" style="font-size: 1.2em;">Leonardo AI</a>
@@ -30,4 +30,3 @@
 
 </body>
 </html>
-
